so yeah i fixed a sonic team funny moment

--- a/japan/sonicadv/index.html
+++ b/japan/sonicadv/index.html
@@ -183,7 +183,7 @@ BODY {
 </table>
 <center class="style3">
 <br>
-<a href="http://www.sonicteam.com/" target="_top"><strong>&lt;&lt;Return&gt;&gt;</strong></a>
+<a href="/index.html" target="_top"><strong>&lt;&lt;Return&gt;&gt;</strong></a>
 </center>
 </body>
 
