--- a/japan/sonicadv/info/cd_teambest.html
+++ b/japan/sonicadv/info/cd_teambest.html
@@ -287,7 +287,7 @@ Sonic Rのエンディング曲！
 </table>
 
 </center>
-<div align="center"><font size="2"><a href="../index.html">&lt;&lt;戻る&gt;&gt; 
+<div align="center"><font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt; 
   </a></font> </div>
 </body>
 
