--- a/japan/sonicadv/info/cd_vocalmini.html
+++ b/japan/sonicadv/info/cd_vocalmini.html
@@ -201,7 +201,7 @@ BOWWOWの堀江くんに歌ってもらったライブとか色々あったけど、この完成ヴァージョンの
 
 
 </center>
-<div align="center"><font size="2"><a href="../index.html">&lt;&lt;戻る&gt;&gt; 
+<div align="center"><font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt; 
   </a></font> </div>
 </body>
 
