--- a/japan/sonicadv/info/houkoku817.html
+++ b/japan/sonicadv/info/houkoku817.html
@@ -244,7 +244,7 @@ SONICTEAM INFORMATION
 
 
 <br><br>
-  <font size="2"><a href="../index.html"><<Return>></a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center></body>
 
 
