--- a/japan/sonicadv/info/nanbei2.html
+++ b/japan/sonicadv/info/nanbei2.html
@@ -125,7 +125,7 @@ SONIC TEAM 1998
 </table>
 
 <center><br><br>
-  <font size="2"><a href="../index.html"><<–ß‚é>></a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 </body></html>
