--- a/japan/sonicadv/info/news1218.html
+++ b/japan/sonicadv/info/news1218.html
@@ -87,7 +87,7 @@ Now, once you've bought Sonic Adventure, connect it to the Internet and explore 
 </table>
 
 <br><br><fontsize="2">
-  <a href="../index.html"><<Return>></a></font> 
+  <a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 </body>
