--- a/japan/sonicadv/info/news1225.html
+++ b/japan/sonicadv/info/news1225.html
@@ -93,7 +93,7 @@ SONIC TEAM 1998
 </table>
 
 <fontsize="2">
-  <a href="../index.html"><<Return>></a></font> 
+  <a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 </body>
