--- a/japan/sonicadv/shot/shot_advss.html
+++ b/japan/sonicadv/shot/shot_advss.html
@@ -129,7 +129,7 @@ SONIC TEAM 1998
 </center>
 
 <center><br><br>
-  <font size="2"><a href="../index.html"><<Return>></a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 </body>
