--- a/japan/sonicadv/snd/index.html
+++ b/japan/sonicadv/snd/index.html
@@ -145,7 +145,7 @@ in any form without the written permission of the copyright owner.<br>
 </table>
 <img src="graphic/blue.gif" width="100%" height="8">
 <br><br><fontsize="2">
-<a href="../index.html"><<–ß‚é>></a></font> 
+<a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 <!-------------------------------@ I‚í‚è‚¾‚æ‚ñ @----------------------------->
 <font size="2"> 
 <address>Feb.1999 SEGA CS Sound Team</address></font>
