--- a/japan/sonicadv/info/happyoukai.html
+++ b/japan/sonicadv/info/happyoukai.html
@@ -477,7 +477,7 @@ SONIC TEAM INFORMATION
 
 
 </table><center><br><br>
-  <font size="2"><a href="../index.html"><<–ß‚é>></a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 
