--- a/japan/sonicadv/info/happyoukai_add0.html
+++ b/japan/sonicadv/info/happyoukai_add0.html
@@ -213,7 +213,7 @@ SONIC TEAM INFORMATION
 </table>
 
 <br><br>
-  <font size="2"><a href="../index.html"><<–ß‚é>></a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 </body>
