--- a/japan/sonicadv/info/hekiga/hekiga0.html
+++ b/japan/sonicadv/info/hekiga/hekiga0.html
@@ -121,7 +121,7 @@
 
 
 <br><br>
-  <font size="2"><a href="../../index.html"><<–ß‚é>></a></font> 
+  <font size="2"><a href="../../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 
