--- a/japan/sonicadv/info/maintheme.html
+++ b/japan/sonicadv/info/maintheme.html
@@ -125,7 +125,7 @@ Non-guitarist
 </table>
 
 <br><br>
-  <font size="2"><a href="../index.html"><<Return>></a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 </body>
