--- a/japan/sonicadv/info/nanbei3.html
+++ b/japan/sonicadv/info/nanbei3.html
@@ -128,7 +128,7 @@ SONIC TEAM 1998
 </table>
 
 <center><br><br>
-  <font size="2"><a href="../index.html"><<Return>></a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 </body></html>
