--- a/japan/sonicadv/info/screen822.html
+++ b/japan/sonicadv/info/screen822.html
@@ -63,7 +63,7 @@ SONIC TEAM INFORMATION
 </table>
 
 <br><br>
-  <font size="2"><a href="../index.html"><<Return>></a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 </body>
