--- a/japan/sonicadv/info/train.html
+++ b/japan/sonicadv/info/train.html
@@ -103,7 +103,7 @@ SONIC TEAM INFORMATION
 
 
 <br><br>
-  <font size="2"><a href="../index.html"><<Return>></a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 </body>
