--- a/japan/sonicadv/shot/stage922.html
+++ b/japan/sonicadv/shot/stage922.html
@@ -213,7 +213,7 @@ Master Emerald shards to clear the stage!<br>
 </table>
 
 <center><br><br>
-  <font size="2"><a href="../index.html"><<Return>></a></font> 
+  <font size="2"><a href="../index.html">&lt;&lt;Return&gt;&gt;</a></font> 
 </center>
 
 </body></html>
