--- a/sonicstadium/topcities/son1mdboxes.html
+++ b/sonicstadium/topcities/son1mdboxes.html
@@ -1,11 +1,11 @@
 <script language='Javascript'>
 function WinOpen(src)
 {
-	OpenWin = window.open(src, '12B29DDC')
+	OpenWin = window.open(src, '28AC373F')
 	OpenWin.focus()
 }
 <!--
-	window.open('https://web.archive.org/20011123000000/http://64.152.192.118/stuff_tc/popupbanner.html','12B29DDC','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20020113000000/http://www.onesuite.com/','28AC373F','toolbar=yes,location=yes,directories=yes,status=yes,menubar=yes,scrollbars=yes,resizable=yes,width=800,height=550');
 // -->
 </SCRIPT>
 <HTML>
