--- a/sonicstadium/topcities/son3md.html
+++ b/sonicstadium/topcities/son3md.html
@@ -22,21 +22,28 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 -->
 </STYLE>
  </HEAD>
- <BODY background="bg.gif" bgproperties="fixed" TEXT="white" LINK="blue" VLINK="blue" ALINK="blue" LEFTMARGIN="0" TOPMARGIN="0" BOTTOMMARGIN="0"><!--
-	TOPCITIES MEMBER, IF THIS BANNER IS MESSING UP YOUR PAGE LAYOUT, VISIT 
-	https://web.archive.org/20011201000000/http://www.topcities.com/help/banner.html
-	FOR INSTRUCTIONS ON HOW TO FIX IT
--->
+ <BODY background="bg.gif" bgproperties="fixed" TEXT="white" LINK="blue" VLINK="blue" ALINK="blue" LEFTMARGIN="0" TOPMARGIN="0" BOTTOMMARGIN="0"><CENTER>
 
-<CENTER>
-<IFRAME WIDTH=468 HEIGHT=60 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no BORDERCOLOR="#000000" SRC="https://web.archive.org/20011201000000/http://64.152.192.118/stuff_tc/index.htm"></iframe>
+<SCRIPT LANGUAGE="JavaScript1.1" SRC="https://web.archive.org/20020113000000/http://icover.realmedia.com/RealMedia/ads/adstream_jx.ads/topcities.com/entertainment@Position1">
+</script> 
+<script LANGUAGE="JavaScript">
+<!-- 
+if (parseFloat(navigator.appVersion) == 0) { 
+document.write('<IFRAME WIDTH=468 HEIGHT=60 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no BORDERCOLOR="#000000" SRC="https://web.archive.org/20020113000000/http://icover.realmedia.com/RealMedia/ads/adstream_sx.ads/topcities.com/entertainment@Position1"></iframe>'); 
+} 
+// --> 
+</SCRIPT> 
+<noscript> 
+<A HREF="https://web.archive.org/20020113000000/http://icover.realmedia.com/RealMedia/ads/click_nx.ads/topcities.com/entertainment@Position1?x"><IMG SRC="https://web.archive.org/20020113000000/http://icover.realmedia.com/RealMedia/ads/adstream_nx.ads/topcities.com/entertainment@Position1?x"></a> 
+</noscript>
+
 <TABLE BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR>
 		
-      <TD> <A HREF="https://web.archive.org/20011201000000/http://www.topcities.com/cgi-bin/affiliates/clickcount.cgi?url=www.thefreesite.com" TARGET="_top"> <IMG SRC="https://web.archive.org/20011201000000/http://64.152.192.118/stuff_tc/mb_thefreesite156x20.gif" WIDTH=156 HEIGHT=20 BORDER=0></A></TD>
+      <TD> <A HREF="https://web.archive.org/20020113000000/http://www.topcities.com/cgi-bin/affiliates/clickcount.cgi?url=www.thefreesite.com" TARGET="_top"> <IMG SRC="/stuff_tc/mb_thefreesite156x20.gif" WIDTH=156 HEIGHT=20 BORDER=0></A></TD>
 		
-      <TD> <A HREF="https://web.archive.org/20011201000000/http://www.topcities.com/cgi-bin/affiliates/clickcount.cgi?url=www.topcities.com/cgi-bin/home/signup" TARGET="_top"> 
-        <IMG SRC="https://web.archive.org/20011201000000/http://64.152.192.118/stuff_tc/mb_topcities312x20.gif" WIDTH=312 HEIGHT=20 BORDER=0 ALT="Get Your Free 150 MB Website Now!"></A></TD>
+      <TD> <A HREF="https://web.archive.org/20020113000000/http://www.topcities.com/cgi-bin/affiliates/clickcount.cgi?url=www.topcities.com/cgi-bin/home/signup" TARGET="_top"> 
+        <IMG SRC="/stuff_tc/mb_topcities312x20.gif" WIDTH=312 HEIGHT=20 BORDER=0 ALT="Get Your Free 150 MB Website Now!"></A></TD>
 	</TR>
 </TABLE>
 
