--- a/sonicstadium/topcities/sonadv.html
+++ b/sonicstadium/topcities/sonadv.html
@@ -5,7 +5,7 @@ function WinOpen(src)
 	OpenWin.focus()
 }
 <!--
-	window.open('https://web.archive.org/20011201000000/http://64.152.192.118/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20020114000000/http://www.onesuite.com/','28AC373F','toolbar=yes,location=yes,directories=yes,status=yes,menubar=yes,scrollbars=yes,resizable=yes,width=800,height=550');
 // -->
 </SCRIPT>
 <HTML>
@@ -231,7 +231,7 @@ the right time. The animals that are realeased from the
  Sonic to destroy this monster and you'll discover what
  happens afterwards! Play Sonic Adventure. Love Sonic
  Adventure.<br>
-P.S. This screenshot is from <a href="https://web.archive.org/20011201000000/http://www.segadreamcast.net/" target="_blank"><font color=blue>SegaDreamcast.net</a></font>. Dangnammit, you can tell? </table>
+P.S. This screenshot is from <a href="https://web.archive.org/20020114000000/http://www.segadreamcast.net/" target="_blank"><font color=blue>SegaDreamcast.net</a></font>. Dangnammit, you can tell? </table>
 
 
 <p>
