finally finished that one html file i'd been translating for two days now

--- a/japan/sonicadv/info/cd_teambest.html
+++ b/japan/sonicadv/info/cd_teambest.html
@@ -64,19 +64,19 @@ Distributed by: Pony Canyon Inc.
 
 <tr><td colspan=2 align="left">
 
-ソニックチーム作品のボーカル曲を集めた、ファン待望のベストアルバムが１１月６日に、遂に発売決定！<br>
+The long-awaited best album of vocal songs from Sonic Team's works will finally be released on November 6th!<br>
 
-光吉氏、佐々木氏のボーカル曲を始め、数々の英語ボーカル曲も収録。<br>
+It includes vocal songs by Mitsuyoshi and Sasaki, as well as numerous English vocal songs.<br>
 
-スピード感に溢れた、ダンサブルなサウンドを一枚に納めた必聴の一枚だよ。<p>
-
-
-
-ソニックアドベンチャーで未来を見る前に、まずはこれを聞いて原点に戻ろう！<br>
+It's a must-listen for its speedy, danceable sound on one disc.<p>
 
 
 
-マジで<b>売り切れ必至！</b>
+Before we look to the future with Sonic Adventure, let's go back to our roots by listening to this first!<br>
+
+
+
+Seriously, <b>we must sell out!</b>
 
 
 
@@ -92,7 +92,7 @@ Distributed by: Pony Canyon Inc.
 
 <font size=4 color="white"><b>
 
-- 収録曲 -
+- Songs -
 
 </b></font>
 
@@ -108,11 +108,11 @@ Distributed by: Pony Canyon Inc.
 
 <b>01.  DREAMS DREAMS ( Kids ver. )</b><br>
 
-ご存じ、ナイツのエンディングテーマ！
+You know, the ending theme to NiGHTS!
 
-好評だったのにサントラには収録されていなかったこのバージョン。
+This version was well received but was not included in the soundtrack.
 
-ついにＣＤになりました。
+Finally, it's on CD.
 
 </td></tr>
 
@@ -126,11 +126,11 @@ Distributed by: Pony Canyon Inc.
 
 <b>02.  DREAMS DREAMS（A-Cappella ver．）</b><br>
 
-クリスマスナイツからのアカペラバージョンの「Dreams　Dreams 」<br>
+An acappella version of Dreams Dreams from Christmas NiGHTS.<br>
 
-ちょっと大人のクリスマスって感じですよね。
+It's a bit like a grown-up Christmas, isn't it?
 
-恋人と二人で聞きたいムード満点のバージョンです。
+This is a moody version to listen to with your partner.
 
 </td></tr>
 
@@ -144,9 +144,9 @@ Distributed by: Pony Canyon Inc.
 
 <b>03.  Super Sonic Racing</b><br>
 
-SEGA EUROPEのサウンドクリエイタ－、Richardが全曲書いて
+SEGA EUROPE's sound creator Richard wrote all the music for Sonic R,
 
-いるSonic Rのトップをかざるのはこの曲！
+and this is the song that tops the list!
 
 Everybody's Super Sonic Racing !!<p>
 
@@ -154,25 +154,25 @@ Everybody's Super Sonic Racing !!<p>
 
 <b>04.  Can You Feel The Sunshine</b><br>
 
-とにかくSonic Rはノリが良くてメロディアスな曲がめじろ押し
+Anyway, Sonic R has a lot of melodious
 
-だけど、これはそんな代表曲！
+songs, and this is one of them!
 
-つい口ずさんでしまうメロディとリズムにいつのまにか身をまか
+The melodies and rhythms will have you
 
-してしまうよね！<p>
+humming along before you know it!<p>
 
 
 
 <b>05.  Number One</b><br>
 
-Sonic Rのエンディング曲！
+Sonic R's ending song!
 
-前の2曲とかわってぐっと落ち着いたシャッフルビート！
+A much calmer shuffle beat than the previous two songs!
 
-かっこ良すぎるよ！！
+It's too cool!
 
-まさに、Number One！！
+Number One, indeed!
 
 </td></tr>
 
@@ -182,35 +182,35 @@ Sonic Rのエンディング曲！
 
 <tr><td>
 
-<b>06.  Burning Hearts ～炎のANGEL～</b><br>
+<b>06.  Burning Hearts -ANGEL of Flame-</b><br>
 
-セガの光吉が熱く熱く歌う同タイトル主題歌です。
+This is the theme song of the same title, sung passionately and enthusiastically by Mitsuyoshi of Sega.
 
-セガカラにも収録されてるよ！
+It's included in Sega Kara!
 
-みんな覚えてうたってね。<p>
+I hope you all remember it and sing it.<p>
 
 
 
 <b>07.  We are Burning Rangers</b><br>
 
-ゲーム中デモ画面やシューティング面で使われていた挿入曲。
+An insert song that was used in the demo screen and shooting aspect of the game.
 
-アカペラ版「Dreams　Dreams 」で歌っていたマーロンサンダースが
+Marlon Sanders, who sang on the acappella version of Dreams Dreams is on vocals.
 
-ボーカルをとっています。バーニングレンジャーはボーカル曲全てが
+Burning Ranger is Omar Hakim's drumming in all the vocal songs.
 
-オマーハキムのドラム。特にこの曲では熱いプレーが聞けるよ。<p>
+You can hear his hot playing especially in this song.<p>
 
 
 
 <b>08.  I just smile</b><br>
 
-同エンディングテーマ。ナイツでお馴染みの佐々木朋子が歌詞と
+The ending theme of the same song. The lyrics and vocals were written by Tomoko Sasaki of NiGHTS fame.
 
-ボーカルを担当しました。キャラクター「イリア」の雰囲気によくあった
+The song has a delicate feel that fits the atmosphere of the character Ilia.
 
-繊細な感じの歌に仕上がりました。心にしみるミッドバラードです。
+It is a heart-wrenching mid-ballad.
 
 </td></tr>
 
@@ -222,25 +222,25 @@ Sonic Rのエンディング曲！
 
 <tr><td>
 
-<b>09.  Sonic‐You Can Do Anything</b><br>
+<b>09.  Sonic: You Can Do Anything</b><br>
 
-93年に発売されたMEGACD版「SONIC　CD」の、オープニングムービー用
+The theme song for the opening movie of the MEGA CD version of Sonic CD,
 
-テーマ曲。宇徳敬子さんが歌ってくれました。駆け回るソニックのムービー
+ released in 1993. It was sung by Keiko Utoku.
 
-に負けないスピード感のあるポップなナンバーです。<p>
-
-
-
-<b>10.  Cosmic Eternity‐Believe in Yourself</b><br>
+It is a pop number with a sense of speed that matches the movie of Sonic running around.<p>
 
 
 
-同エンディングテーマ。これも宇徳さんが歌っています。
+<b>10.  Cosmic Eternity: Believe in Yourself</b><br>
 
-オープニングテーマもエンディングテーマも元「SHOGUN」のギタリスト
 
-ケーシーランキンによる歌詞とRAPです。前向きで力強いテーマで書かれています。
+
+The ending theme of the same song. This is also sung by Utoku.
+
+Both the opening and ending theme are lyrics and RAP by forumer SHOGUN guitarist Casey Rankin.
+
+It is written with a positive and powerful theme.
 
 </td></tr>
 
@@ -254,13 +254,13 @@ Sonic Rのエンディング曲！
 
 <b>11.  DREAMS DREAMS ～ Sweet mix in holy night</b><br>
 
-このソニックチームホームページのナイツサウンドのコーナーでプレゼント
+This is a reggae version of Dreams Dreams that was made
 
-企画として作られたレゲーバージョンの「Dreams　Dreams 」です。
+as a gift for the NiGHTSound section of the Sonic Team website.
 
-「ナイツ」や「クリスマスナイツ」で使われた音素材を随所にちりばめ
+It's a sweet song with many of the sounds used in NiGHTS and Christmas NiGHTS sprinkled throughout.
 
-スイートに作り込みました。今年のクリスマスにでも聞いて盛り上がろう。
+Let's listen to it this Christmas and get excited.
 
 </td></tr>
 
@@ -274,9 +274,9 @@ Sonic Rのエンディング曲！
 
 
 
-それからこれはないしょなんだけど・・・<font color="red"><b>一足先に未来を聞けるかも</b></font>・・・<br>
+Also, we don't want to tell you this, but... <font color="red"><b>you might get to hear the future first</b></font>...<br>
 
-さあ、今すぐ予約に走ろう！
+so run and book now!
 
 <p>
 
