--- a/japan.html
+++ b/japan.html
@@ -6,14 +6,31 @@
 <link rel="stylesheet" type="text/css" href="main.css" media="all">
 </head>
 <h1 align="center">Translated Japanese Sonic Sites</h1>
-<a href="japan/sonic3d" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic3d.png" width="320" height="160" alt="Sonic 3D: Flickies' Island"></a>
-<a href="japan/sonicjam" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicjam.png" width="320" height="200" alt="Sonic Jam"></a>
-<a href="japan/sonicr" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicr.png" width="320" height="240" alt="Sonic R"></a>
-<!--<a href="japan/sonicadv" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv.png" width="320" height="200" alt="Sonic Adventure"></a>-->
-<a href="japan/sonicadv_int" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv_int.gif" alt="Sonic Adventure International"></a>
-<a href="japan/sonicadv2" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv2.png" width="320" height="140" alt="Sonic Adventure 2"></a>
-<a href="japan/advance" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/advance.png" width="320" height="140" alt="Sonic Advance"></a>
-<a href="japan/sonic2b/en" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic2b.png" width="320" height="160" alt="Sonic Adventure 2: Battle"></a>
+<a href="japan/sonicjam" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicjam.png" width="320" height="200" alt="Sonic Jam"></a><!--June 20th, 1997?-->
+<a href="japan/sonicr" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicr.png" width="320" height="240" alt="Sonic R"></a><!--December 4th, 1997-->
+<!--<a href="japan/sonicadv" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv.png" width="320" height="200" alt="Sonic Adventure"></a>--><!--July 15th, 1998-->
+<a href="japan/sonicadv_int" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv_int.gif" alt="Sonic Adventure International"></a><!--October 14th, 1999?-->
+<a href="japan/sonic3d" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic3d.png" width="320" height="160" alt="Sonic 3D: Flickies' Island"></a><!--October 14th, 1999?-->
+<a href="japan/sonicadv2" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv2.png" width="320" height="140" alt="Sonic Adventure 2"></a><!--April 14th, 2001-->
+<a href="japan/sonic2b/en" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic2b.png" width="320" height="160" alt="Sonic Adventure 2: Battle"></a><!--August 23rd, 2001-->
+<a href="japan/advance" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/advance.png" width="320" height="140" alt="Sonic Advance"></a><!--December 20th, 2001?-->
+<!--<a href="japan/minitoy" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/minitoy.png" width="320" height="160" alt="minitoy"></a>--><!--June 4th, 2002-->
+<!--<a href="japan/megacolle" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/megacolle.png" width="320" height="160" alt="Sonic Mega Collection"></a>--><!--July 1st, 2002-->
+<!--<a href="japan/advance2" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/advance2.png" width="320" height="160" alt="Sonic Advance 2"></a>--><!--July 1st, 2002-->
+<!--<a href="japan/sonicx" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicx.png" width="320" height="160" alt="Sonic X"></a>--><!--February 21st, 2003-->
+<!--<a href="japan/sonicadvdx" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadvdx.png" width="320" height="160" alt="Sonic Adventure DX: Director's Cut"></a>--><!--May 18th, 2003-->
+<!--<a href="japan/sonic_heroes" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic_heroes.png" width="320" height="160" alt="Sonic Heroes"></a>--><!--May 18th, 2003-->
+<!--<a href="japan/battle" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/battle.png" width="320" height="160" alt="Sonic Battle"></a>--><!--June 2nd, 2003-->
+<!--<a href="japan/pinball" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/pinball.png" width="320" height="160" alt="Sonic Pinball Party"></a>--><!--June 4th, 2003-->
+<!--<a href="japan/advance3" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/advance3.png" width="320" height="160" alt="Sonic Advance 3"></a>--><!--March 12th, 2004-->
+<!--<a href="japan/megacolleplus" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/megacolleplus.png" width="320" height="160" alt="Sonic Mega Collection Plus"></a>--><!--September 16th, 2004-->
+<!--<a href="japan/SonicChannelOld" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicchannelold.png" width="320" height="160" alt="Sonic Channel (old version)"></a>--><!--May 18th, 2005-->
+<!--<a href="japan/gems" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/gems.png" width="320" height="160" alt="Sonic Gems Collection"></a>--><!--May 18th, 2005-->
+<!--<a href="japan/rush" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/rush.png" width="320" height="160" alt="Sonic Rush"></a>--><!--May 18th, 2005-->
+<!--<a href="japan/shadow" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/shadow.png" width="320" height="160" alt="Shadow the Hedgehog"></a>--><!--May 18th, 2005-->
+<!--<a href="japan/riders" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/riders.png" width="320" height="160" alt="Sonic Riders"></a>--><!--September 9th, 2005-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic the Hedgehog"></a>--><!--September 16th, 2005-->
+<!--<a href="japan/wpack" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/wpack.png" width="320" height="160" alt="Double Pack"></a>--><!--January 10th, 2006-->
 <h2 align="center">Credits</h2>
 <p align="center">Translation: KrazeeTobi
 <br>Text Revision: KrazeeTobi
