--- a/japan/sonic3d/index.html
+++ b/japan/sonic3d/index.html
@@ -22,7 +22,7 @@ Sonic 3D: Flickies' Island
       <P align="center"> <a href="http://www.d-direct.ne.jp/"> </a><a href="http://www.d-direct.ne.jp/"><font color="#ff0000"><blink></blink></font></a><br>
       <P align="center"> <font color="#0000ff" font size=4>Sonic 3D for the Sega Saturn is finally here!</font><br>
       <P align="center">Sonic fans in Japan have been waiting a long time!<br>
-        After being released in the US and Europe. Sonic 3D is finally ready to be delivered to people in Japan.<br>
+        After being released in both the US and Europe. Sonic 3D is finally ready to be delivered to people in Japan.<br>
         Oh, and it's being released at the same time as Sonic Adventure International on the Dreamcast!<br>
       <p align="center"> 
       <hr width=60% align="center">
@@ -38,17 +38,17 @@ Sonic 3D: Flickies' Island
         </table>
       </div>
       <p align="center"> <font color="#0000ff" font size=4>Protect Flickies from Dr. Robotnik!</font><br>
-      <P align="center">Chaos Emerald, a beautiful gem with mystical powers.<br>
-      <P align="center">One day, Sonic, Tails, and Knuckles are visiting a mysterious island. <font color="#ff00ff">Flicky Island </font>is its name.<br>
-        According to legend, the <font color="#ff00ff">Chaos Emeralds </font>lie dormant on this island.<br>
-        The first thing Sonic and his friends decided to do was to look for a bird called <font color="#ff00ff">Flicky</font>, which was the clue to the gems.<br
+      <P align="center">The Chaos Emeralds, beautiful gems with mystical powers.<br>
+      <P align="center">One day, Sonic, Tails, and Knuckles are visiting a mysterious island. It is called <font color="#ff00ff">Flicky Island</font>.<br>
+        According to legend, the <font color="#ff00ff">Chaos Emeralds</font> lie dormant on this island.<br>
+        The first thing Sonic and his friends decided to do was to look for a bird called <font color="#ff00ff">Flicky</font>, which was a key clue to the gems.<br
 >
       <P align="center">But at the same time, a spy satellite hovers eerily in the sky, far away.<br>
         "I've finally found Flicky Island, home of the <font color="#ff00ff">Chaos Emeralds</font>!"<br>
         I've heard that dumb voice before... yes, it's the evil genius scientist, <font color="#ff00ff">Dr. Robotnik</font>!<br>
       <P align="center"> Will Sonic be able to rescue Flicky and the others and find the Chaos Emeralds before Dr. Robotnik does?<br>
       <p align="center"> <a href="sonic3d_image.html"> <IMG border=0 SRC="01_eps.jpg"></a><BR>
-        <font size=4 FONT COLOR="RED"> <A HREF="sonic3d_image.html">Go to Sonic 3D screen shots!</A></FONT><BR>
+        <font size=4 FONT COLOR="RED"> <A HREF="sonic3d_image.html">Go to Sonic 3D screenshots!</A></FONT><BR>
       <table width="620" align="center">
         <tr><td height=16 colspan=2></td>
 <tr><td align="center" colspan=2 bgcolor="red"><font size=2 color="#ffffff">
