--- a/japan/sonicadv_int/index.html
+++ b/japan/sonicadv_int/index.html
@@ -29,17 +29,17 @@ SONIC ADVENTURE International
       <P align="center"> <font color="#0000ff" font="font" size="2"><I><B>It could be you! The fastest guy in the world!</B></I></font><font size="2"><br>
         </font>
       <P align="center"><font size="2">Eight months after Sonic Adventure...<br>
-        Now, Sonic Team will be presenting four films.<br>
-        Each of the four works reflects the ideas of Yuji Naka and the Sonic Team.<br>
+        Now, Sonic Team will be presenting four games.<br>
+        Each of the four games reflects the ideas of Yuji Naka and the Sonic Team.<br>
         The first to be announced is Sonic Adventure International,<br>
-        a worldwide version of Sonic Adventure that will allow everyone in the world to participate!<br>
+        a worldwide version of Sonic Adventure that will allow everyone in the world to play!<br>
         </font>
-      <p align="center"> <font color="#ff0000" font="font" size="2"><BLINK>Sonic Team USA is on!</BLINK></font><font size="2"><br>
+      <p align="center"> <font color="#ff0000" font="font" size="2"><BLINK>Sonic Team USA is on it!</BLINK></font><font size="2"><br>
         This project has been in progress secretly as an "overseas version" since the end of Sonic Adventure's development.<br>
-        We want to feel the wind of foreign countries!... so the development team flew out of Japan!<br>
-        The U.S. moved the location to San Francisco to begin development!<br>
+        We want to feel the wind of foreign countries, so the development team flew out of Japan!<br>
+        We moved to San Francisco to begin development!<br>
         Sonic Adventure International is a new game from San Francisco!<br>
-        It's a global standard edition of Sonic Adventure for everyone in the world!<br>
+        It's a global edition of Sonic Adventure for everyone in the world!<br>
         </font>
       <p align="center"> 
       <hr width=70% align="center">
@@ -49,7 +49,7 @@ SONIC ADVENTURE International
           <font color="#0000ff" font="font" size="2">Bilingual audio and subtitled in five languages</font><br>
           <OL>
             <font size="2">You can also choose cool English voices for Sonic and his friends! (Choose from Japanese or English)<br>
-            You can also choose from five different subtitled! (Japanese, English, French, German, and Spanish)<br>
+            You can also choose from five different subtitles! (Japanese, English, French, German, and Spanish)<br>
             </font>
           </OL>
           <p> <font color="#0000ff" font="font" size="2">World Ranking</font><font size="2"><br>
@@ -57,21 +57,21 @@ SONIC ADVENTURE International
           <OL>
             <font color="#ff0000" font="font" size="2"><BLINK>World Championships ready!</BLINK></font><font size="2"><br>
             You can compete on the Internet to see who's the fastest in the whole world!<br>
-            Of course, the network will announce the ranking!<br>
+            Of course, the network will announce the rankings!<br>
             </font>
           </OL>
-          <p> <font color="#0000ff" font="font" size="2">Other power-ups! Other power-ups!</font><font size="2"><br>
+          <p> <font color="#0000ff" font="font" size="2">Other updates!</font><font size="2"><br>
             </font>
           <OL>
-            <LI><font size="2">Emblem list display -> You can see the status of all 130 emblems acquired in the list!<br>
+            <LI><font size="2">Emblem List: You can see the status of all 130 emblems acquired in the list!<br>
               </font>
-            <LI><font size="2">Display of the number of rings remaining in the casino stage and pinball surface<br>
+            <LI><font size="2">Ring count display in the Casino stage as well as the pinball minigame.<br>
               </font>
-            <LI><font size="2">LAP time and target time display in karting games<br>
+            <LI><font size="2">Lap time and target time display in the racing minigame.<br>
               </font>
-            <LI><font size="2">Karting competition (6 courses in total) to be held<br>
+            <LI><font size="2">Karting competition (6 courses in total) to be held.<br>
               </font>
-            <LI><font size="2">Additional audio (environmental audio, standby audio) increases the sense of realism!<br>
+            <LI><font size="2">Additional audio (environmental audio, standby audio), increasing the sense of realism!<br>
               </font>
           </OL>
           <p> 
@@ -86,7 +86,7 @@ SONIC ADVENTURE International
         <td width="320"><img src="04.jpg"></td>
       </tr>
       <tr> 
-        <td width="320"><font size=2>You've got to experience Sonic reborn in English</font></td>
+        <td width="320"><font size=2>You've got to experience Sonic in English!</font></td>
         <td width="320"><font size=2>Let's go on another adventure with Sonic and his friends!</font></td>
       </tr>
       <tr> 
@@ -94,8 +94,8 @@ SONIC ADVENTURE International
         <td width="320"><img src="text.jpg"></td>
       </tr>
       <tr> 
-        <td width="320"><font size=2>Emblem list display. The list shows you the status of all 130 emblems you've acquired!</font></td>
-        <td width="320"><font size=2>Of course, voices and subtitles can be combined freely. Maybe you can use it for language study?</font></td>
+        <td width="320"><font size=2>Emblem List. The list shows you the status of all 130 emblems you've acquired!</font></td>
+        <td width="320"><font size=2>Of course, voices and subtitles can be combined freely. Perhaps you could use it for language study?</font></td>
     </table>
     <table width="640">
       <tr>
